---------------------------------------------------------------------------------------------------
Version: 0.69.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.4
Date: 2025-06-21
  Changes:
    - Additional safeguards against adding player characters to upgrade lists.
    - Additional safeguards against other mods causing crashes by fucking with my modules.
---------------------------------------------------------------------------------------------------
Version: 0.69.3
Date: 2025-06-21
  Changes:
    - Fixed Crash
---------------------------------------------------------------------------------------------------
Version: 0.69.2
Date: 2025-06-20
  Changes:
    - Removed space age required tag.
---------------------------------------------------------------------------------------------------
Version: 0.69.1
Date: 2025-06-20
  Changes:
    - First public version.